# tyrfing-stm

./: Cargo.toml  README.md  build.rs  justfile  rust-toolchain.toml
.cargo/: config.toml
hw/: .gitignore  README.md  boost.nbt
hw/components/: 2024-06-17_19-41-33.kicad_sym  MP3431.kicad_sym
hw/components/footprints.pretty/: XSON6_SOT1202_NEX-L.kicad_mod  XSON6_SOT1202_NEX-M.kicad_mod  XSON6_SOT1202_NEX.kicad_mod
hw/driver/: Driver.kicad_pcb  Driver.kicad_prl  Driver.kicad_pro  Driver.kicad_sch  sym-lib-table
hw/driver_22mm/: Driver.kicad_pcb  Driver.kicad_prl  Driver.kicad_pro  Driver.kicad_sch  sym-lib-table
src/: aux.rs  battery_level.rs  click.rs  executor.rs  main.rs  monitoring.rs  pins.rs  power.rs  power_curve.rs  state.rs  ui.rs
