[package]
name = "tyrfing-stm"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
cichlid = { git = "https://github.com/simmsb/cichlid", version = "0.2.1", features = ["nightly", "no-std"] }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0", optional = true }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers" ], optional = true }
embassy-futures = "0.1.1"
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0", features = ["stm32l072kb", "time-driver-any", "exti", "memory-x", "unstable-pac"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0", features = [] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.3.0", features = ["tick-hz-32_768"] }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embedded-hal = "1.0.0"
fixed = { version = "1.27.0", features = ["num-traits"] }
fixed-macro = "1.2.0"
maitake = { git = "https://github.com/simmsb/mycelium", features = ["no-cache-pad"], default-features = false, optional = true }
maitake-sync = { git = "https://github.com/simmsb/mycelium", features = ["no-cache-pad"], default-features = false, optional = true }
nalgebra = { version = "0.32.5", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true }
panic-reset = "0.1.1"
paste = "1.0.15"
portable-atomic = { version = "1.6.0", features = ["unsafe-assume-single-core"] }
small_morse = "0.1.0"
static_cell = { version = "2.1.0", features = ["nightly"] }

[patch."https://github.com/embassy-rs/embassy"]
embassy-executor = { git = "https://github.com/simmsb/embassy", branch = "main" }
embassy-stm32 = { git = "https://github.com/simmsb/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/simmsb/embassy", branch = "main" }
embassy-time = { git = "https://github.com/simmsb/embassy", branch = "main" }
embassy-time-driver = { git = "https://github.com/simmsb/embassy", branch = "main" }

[features]
default = ["default_no_debug", "debug"]
default_no_debug = ["default_unselected_executor", "use_maitake_executor"]
default_unselected_executor = ["default_modes", "latest_board", "with_defmt"]
# default_no_debug = ["default_modes", "turbowakers"]
default_modes = ["mode_fade", "mode_croak"]
mode_fade = []
mode_strobe = []
mode_croak = []
low_power = [
          "embassy-stm32/low-power"
]
turbowakers = ["embassy-sync/turbowakers", "embassy-executor/turbowakers"]
debug = ["defmt-rtt", "panic-probe",
         # "embassy-time/defmt-timestamp-uptime"
         ]
with_defmt = [
      "embassy-executor?/defmt",
      "embassy-stm32/defmt",
      "embassy-sync/defmt",
      "embassy-time/defmt",
]
use_maitake_executor = ["maitake", "maitake-sync"]
use_embassy_executor = ["embassy-executor"]

# board revisions
board_dev = []
board_v0 = []
board_v1 = []
latest_board = ["board_v1"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
lto = 'fat'
opt-level = 'z'           # <-
overflow-checks = true  # <-
panic = 'abort'

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z'           # <-
overflow-checks = false  # <-
panic = 'abort'

[build-dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
